Fixed endless loop in the legacy keyboard driver (currently only used by consoled). This actually fixes bug #1024.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20140 a95241bf-73f2-0310-859d-f6bbb57e9c96